fix button overlap

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ button:hover {
 }
 
 .telegram {
-  right: 120px;
+  right: 200px;
   background: #0088cc;
 }
 
